# micronet-antenna

./: CONTRIBUTING.md  Cargo.toml  INTEGRATION_OS_KERNEL_FOUNDRY.md  LICENSE  NOTICE  README.md  deny.toml
.github/workflows/: ci.yml  publish.yml
docs/: 00_vision.md  01_architecture.md  02_protocol.md  03_state_machine.md  04_governance.md  05_economy.md  06_security.md  08_roadmap.md  CHANGELOG.md  MAINTAINERS_GUIDE.md  README.md  USER_MANUAL.md
docs/07_integrations/: README.md  micronet_os.md  os_kernel_foundry.md
examples/: basic.rs
foundry-demo/: Cargo.toml
foundry-demo/src/: lib.rs
micronet-antenna-core/: Cargo.toml
micronet-antenna-core/src/: consensus.rs  lib.rs  state.rs  types.rs
micronet-live/: Cargo.toml
micronet-live/src/: main.rs
micronet-os/: Cargo.toml
micronet-os/src/: lib.rs  main.rs
src/: consensus.rs  error.rs  lib.rs  state.rs  types.rs
src/transport/: mod.rs  udp.rs
