[package]
name = "micronet-antenna-core"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "no_std core primitives for micronet-antenna (identity, messages, proposals/votes, deterministic state/runtime)."
homepage = "https://github.com/alisio85/micronet-antenna"
repository = "https://github.com/alisio85/micronet-antenna"
documentation = "https://docs.rs/micronet-antenna-core"

[features]
default = ["alloc"]
alloc = []
std = ["alloc", "dep:rand"]
serde = ["alloc", "dep:serde"]

[dependencies]
rand = { version = "0.8", optional = true }
serde = { version = "1.0", default-features = false, features = ["derive"], optional = true }
